--- a/Web Scrapping 3.ipynb
+++ b/Web Scrapping 3.ipynb
@@ -21,274 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.collegesearch.in/bca-colleges-india?page=1\n",
-      "20\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "20\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=2\n",
-      "30\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "30\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=3\n",
-      "40\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "40\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=4\n",
-      "50\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "50\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=5\n",
-      "60\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "60\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=6\n",
-      "70\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 1)\n",
-      "('dt', 1)\n",
-      "70\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=7\n",
-      "80\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "80\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=8\n",
-      "90\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "90\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=9\n",
-      "100\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "100\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=10\n",
-      "110\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "110\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=11\n",
-      "120\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "120\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=12\n",
-      "130\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "130\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=13\n",
-      "140\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "140\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=14\n",
-      "150\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "150\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=15\n",
-      "160\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "160\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=16\n",
-      "170\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "170\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=17\n",
-      "180\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "180\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=18\n",
-      "190\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 2)\n",
-      "('dt', 3)\n",
-      "('dt', 3)\n",
-      "('dt', 2)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "190\n",
-      "https://www.collegesearch.in/bca-colleges-india?page=19\n",
-      "200\n",
-      "('dt', 1)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 3)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "('dt', 4)\n",
-      "200\n",
-      "Ended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# specify the url\n",
     "# https://www.collegesearch.in/bca-colleges-india?page=159\n",
@@ -300,7 +35,7 @@
     "affliation=[]\n",
     "for i in range(1,20):\n",
     "    quote_page = \"https://www.collegesearch.in/bca-colleges-india?page=\"+str(i)\n",
-    "    print(quote_page)\n",
+    "#     print(quote_page)\n",
     "    page = urllib2.urlopen(quote_page)\n",
     "    # parse the html using beautiful soup and store in variable `soup`\n",
     "    soup = BeautifulSoup(page, \"html.parser\")\n",
@@ -312,7 +47,7 @@
     "        a=h2.find('a')\n",
     "        college_name.append(a.attrs['title'].encode(\"utf-8\"))\n",
     "\n",
-    "    print(len(college_name))\n",
+    "#     print(len(college_name))\n",
     "    \n",
     "# SR Rating\n",
     "# \"Smart Quotient calculated on a gamut of factors that govern quality of an institute.\"\n",
@@ -359,7 +94,7 @@
     "\n",
     "#     print(len(total_duration))\n",
     "#     print(len(total_fees))\n",
-    "    print(len(affliation))\n",
+    "#     print(len(affliation))\n",
     "    \n",
     "    \n",
     "    \n",
@@ -388,201 +123,6 @@
     "\n",
     "print(\"Ended\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1598"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 6)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Deemed',\n",
-       " 'Deemed',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'Deemed',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'Autonomous',\n",
-       " 'Deemed',\n",
-       " 'Autonomous',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'Autonomous',\n",
-       " 'Autonomous',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'Deemed',\n",
-       " 'Deemed',\n",
-       " 'Deemed',\n",
-       " 'State Private University ',\n",
-       " 'State Private University ',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'Deemed',\n",
-       " 'State Private University ',\n",
-       " 'NA',\n",
-       " 'Deemed',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'State Private University ',\n",
-       " 'Autonomous',\n",
-       " 'NA',\n",
-       " 'State Private University ',\n",
-       " 'Deemed',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'None',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'State Private University ',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'Autonomous',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'State Private University ',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'NA',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'Nan',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'Nan',\n",
-       " 'None',\n",
-       " 'None',\n",
-       " 'None',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'State Private University ',\n",
-       " 'NA',\n",
-       " 'None',\n",
-       " 'NA',\n",
-       " 'State Private University ',\n",
-       " 'NA']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'c']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[u'a', u'b', u'c']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<type 'list'>\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
